Profile page added, minor fixes

--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -11,7 +11,8 @@
   <title>Heroic Features - Start Bootstrap Template</title>
   
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <!--<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet"> -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   
   <!-- Custom styles for this template -->
   <link href="css/heroic-features.css" rel="stylesheet">
@@ -30,7 +31,7 @@
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Home</a>
+      <a class="navbar-brand" href="/">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -38,10 +39,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="navbar-brand" href="#">Register<span class="sr-only">(current)</span></a>
+            <a class="navbar-brand" href="/register">Register<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="navbar-brand" href="#">Link</a>
+            <a class="navbar-brand" href="/login">Login</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -52,7 +53,7 @@
     </nav>
 
     <!-- Page Features -->
-    <div class="row ">
+    <div class="row m-0">
 
       <div class="col-lg-3 col-md-6 p-0">
         <div class="card h-100">
@@ -104,7 +105,7 @@
 
     </div>
     <!-- /.row -->
-    <div class="row ">
+    <div class="row m-0">
 
       <div class="col-lg-3 col-md-6 p-0">
         <div class="card h-100">
