--- a/cinema/src/main/resources/templates/register.html
+++ b/cinema/src/main/resources/templates/register.html
@@ -11,30 +11,25 @@
 		<title>Heroic Features - Start Bootstrap Template</title>
 	  
 		<!-- Bootstrap core CSS -->
-		<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+		<!--<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet"> -->
+  		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  
 		<!-- Custom styles for this template -->
 		<link href="css/heroic-features.css" rel="stylesheet">
   	</head>
   	<body class="">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark m-0">
-			<a class="navbar-brand" href="#">Home</a>
+			<a class="navbar-brand" href="/">Home</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			  <span class="navbar-toggler-icon"></span>
 			</button>
 		  
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			  <ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-				  <a class="navbar-brand" href="#">Register<span class="sr-only">(current)</span></a>
-				</li>
 				<li class="nav-item">
-				  <a class="navbar-brand" href="#">Link</a>
+				  <a class="navbar-brand" href="/login">Login</a>
 				</li>
 			  </ul>
-			  <form class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-			  </form>
 			</div>
 		  </nav>
 		<div class="container">
@@ -48,7 +43,7 @@
 				<input type="password" id="inputPassword" class="form-control my-2" placeholder="Password" required="">
 				<input type="password" id="repeatPassword" class="form-control my-2" placeholder="Password" required="">
 
-    			<button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+    			<a href="#"><button class="btn btn-lg btn-primary btn-block" type="submit">Register</button></a>
 			</form>
 	</div>
 	</body>
